--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Intellij Idea
+.idea
+*.iml
+
 *.py[cod]
 
 # C extensions
@@ -15,8 +19,6 @@ var
 sdist
 develop-eggs
 .installed.cfg
-lib
-lib64
 
 # Installer logs
 pip-log.txt
